--- a/src/main/resources/templates/carsSearchResult.html
+++ b/src/main/resources/templates/carsSearchResult.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 	<head>
 		<title>Best Choice Cars</title>
 	</head>
@@ -7,10 +7,11 @@
 	
 	<h1>Best Choice Cars</h1>
 	<h3>Choose a car to buy</h3>
-	
+	<form th:action="@{/bookingConfirm}" method="get">
 		<table border="1px">
 			<thead>
 				<tr>
+					<td></td>
 					<td>Brand</td>
 					<td>Model</td>
 					<td>Year</td>
@@ -20,19 +21,26 @@
 				</tr>
 			</thead>
 			<tbody>
-				<tr>
-					<td><input type="radio"></td>
+				<tr th:each="car : ${selectedBrandCars}">
+					<td><input type="radio" id="id" name="id" value="${car.Id}"></td>
+					<td th:text=${car.brand}></td>
+					<td th:text=${car.model}></td>
+					<td th:text=${car.year}></td>
+					<td th:text=${car.noOfKM}></td>
+					<td th:text=${car.price}></td>
+					<td th:text=${car.fuel}></td>
 				</tr>
 				<tr>
 					<td colspan="7">
-						<input type="submit" value="Find Models">
+						<input type="submit" value="Book Car">
 						<button type="button" >Back</button>
-						<button type="button" >Home</button>
+						<a href="http://localhost:8080/"><button type="button" >Home</button></a>
 					</td>
 				</tr>
 				
 			</tbody>
 		</table>
-	
+	</form>
+	<td><div style="color: red;" th:if="${error}" th:text="${error}"></div></td>
 	</body>
 </html>
